[package]
name = "seagoat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive", "env"] }
hyper = "1.7.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.7.0"
insta = "1.43.2"
proptest = "1.8.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
assert_cmd = "2.0.16"
portpicker = "0.1.1"
