[package]
name = "seagoat-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seagoat"
path = "src/main.rs"

authors = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
